[package]
name = "rusty-key"
version = "0.1.0"
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
actix-web = "4.3.1"
lazy_static = "1.4.0"
threadpool = "1.8.1"
serde = { version = "1.0", features = ["derive"] }
serde_json = "1"
regex = "1.8.1"
clap = { version = "4.2.7", features = ["derive"] }
